--- a/swak-fx/pom.xml
+++ b/swak-fx/pom.xml
@@ -12,6 +12,11 @@
 			<groupId>com.swak</groupId>
 			<artifactId>swak-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx</artifactId>
+			<version>8.40.14</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
