--- a/swak-fx/pom.xml
+++ b/swak-fx/pom.xml
@@ -23,6 +23,11 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-sample</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 </project>
