--- a/swak-fx/pom.xml
+++ b/swak-fx/pom.xml
@@ -24,6 +24,16 @@
 			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-sample</artifactId>
 			<scope>provided</scope>
