--- a/swak-swt/pom.xml
+++ b/swak-swt/pom.xml
@@ -136,5 +136,10 @@
 			<artifactId>sqlite-jdbc</artifactId>
 			<version>${sqlite-jdbc.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>${jaxb.version}</version>
+		</dependency>
 	</dependencies>
 </project>
