--- a/swak-fx/pom.xml
+++ b/swak-fx/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -11,6 +12,11 @@
 		<dependency>
 			<groupId>org.controlsfx</groupId>
 			<artifactId>controlsfx</artifactId>
+			<version>${controlsfx.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx-samples</artifactId>
 			<version>${controlsfx.version}</version>
 		</dependency>
 		<dependency>
@@ -33,11 +39,8 @@
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>com.swak</groupId>
-			<artifactId>swak-sample</artifactId>
-			<scope>provided</scope>
-		</dependency>
 
+		<!-- <dependency> <groupId>com.swak</groupId> <artifactId>swak-sample</artifactId> 
+			<scope>provided</scope> </dependency> -->
 	</dependencies>
 </project>
