解决一些小问题

--- a/swak-sample-rpc/src/main/resources/application.properties
+++ b/swak-sample-rpc/src/main/resources/application.properties
@@ -2,11 +2,13 @@
 spring.application.serverSn = server-1-1
 
 # Motan Registry config
+# default injvm
+#spring.motan.registry.regProtocol=injvm
 
 # use zookeeper
-spring.motan.registry.regProtocol=zookeeper
-spring.motan.registry.address=127.0.0.1
-spring.motan.registry.port=2181
+#spring.motan.registry.regProtocol=zookeeper
+#spring.motan.registry.address=127.0.0.1
+#spring.motan.registry.port=2181
 
 # Motan BasicService config
 spring.motan.basicservice.application=demo
