--- a/swak-sample-vertx/pom.xml
+++ b/swak-sample-vertx/pom.xml
@@ -28,6 +28,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
