有可能添加 freemarker 的模板处理，如果前端不使用vue还是需要添加一个模板引擎

--- a/swak-flux/pom.xml
+++ b/swak-flux/pom.xml
@@ -13,8 +13,9 @@
 			<artifactId>swak-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
-			<artifactId>swak-redis</artifactId>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>${freemarker.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
