--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
 		<poi.version>4.0.1</poi.version>
 		<guava.version>21.0</guava.version>
 		<controlsfx.version>8.40.14</controlsfx.version>
+		<freemarker.version>2.3.28</freemarker.version>
 
 		<!-- test -->
 		<junit.version>4.12</junit.version>
