添加 freemarker 的处理

--- a/swak-starter-web/pom.xml
+++ b/swak-starter-web/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>swak-quartz</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>${freemarker.version}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
