--- a/swak-core/pom.xml
+++ b/swak-core/pom.xml
@@ -88,5 +88,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>${freemarker.version}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
