--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 		<module>swak-fx</module>
 		<module>swak-test</module>
 		<module>swak-gen</module>
+		<module>swak-app</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.1.3.RELEASE</spring-boot.version>
