简单的基础版本

--- a/swak-app/shopx/tools-library/src/main/AndroidManifest.xml
+++ b/swak-app/shopx/tools-library/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.veni.tools">
 
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -8,7 +9,6 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.SEND_SMS"/>
-    <uses-permission android:name="android.permission.RESTART_PACKAGES"/>
     <!--它可以监听用户的连接状态并在用户重新连接到网络时重启之前失败的请求-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <!-- 外部存储 -->
