--- a/swak-sample-vertx/src/main/resources/application.properties
+++ b/swak-sample-vertx/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # vertx
 spring.vertx.port=8080
-spring.vertx.mode=EPOLL
+spring.vertx.mode=OS
 spring.vertx.workers.read_pool=5
 spring.vertx.workers.write_pool=15
 
@@ -9,3 +9,18 @@ spring.datasource.url = jdbc:mysql://localhost:3306/cloud?useUnicode=true&charac
 spring.datasource.username = root
 spring.datasource.password = rootadmin
 spring.datasource.maxActive= 40
+
+# motan config
+spring.motan.registry.regProtocol=local
+
+# Motan Basicreferer config
+spring.motan.basicreferer.application=shop
+spring.motan.basicreferer.accessLog=false
+spring.motan.basicreferer.retries=1
+spring.motan.basicreferer.throwException=true
+
+# Motan BasicService config
+spring.motan.basicservice.application=demo
+spring.motan.basicservice.exportPort=8888
+spring.motan.basicservice.accessLog=false
+spring.motan.basicservice.shareChannel=true
