--- a/swak-sample-vertx/pom.xml
+++ b/swak-sample-vertx/pom.xml
@@ -10,17 +10,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.swak</groupId>
-			<artifactId>swak-starter-vertx</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>io.vertx</groupId>
-					<artifactId>vertx-zookeeper</artifactId>
-				</exclusion>
-			</exclusions>
+			<artifactId>swak-vertx</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.swak</groupId>
-			<artifactId>swak-starter-rpc</artifactId>
+			<artifactId>swak-starter</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.swak</groupId>
