--- a/swak-sample-rpc/pom.xml
+++ b/swak-sample-rpc/pom.xml
@@ -10,7 +10,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.swak</groupId>
-			<artifactId>swak-starter-rpc</artifactId>
+			<artifactId>swak-starter</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.swak</groupId>
