--- a/swak-sample/pom.xml
+++ b/swak-sample/pom.xml
@@ -10,7 +10,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.swak</groupId>
-			<artifactId>swak-starter-web</artifactId>
+			<artifactId>swak-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-flux</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.swak</groupId>
