--- a/swak-sample/src/main/resources/application.properties
+++ b/swak-sample/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.profiles.active=dev
 #spring.application.enableWorkers=false
 #spring.application.enableSession=false
 #spring.application.enableActuator=false
-spring.application.enableMotan=false
+#spring.application.enableMotan=false
 
 # server config
 spring.http-server.port=8083
@@ -58,10 +58,16 @@ spring.datasource.maxActive= 20
 #spring.trace.storageChannel=STDOUT
 
 # motan config
-#spring.motan.registry.regProtocol=zookeeper
-#spring.motan.registry.address=127.0.0.1
-#spring.motan.registry.port=2181
-#spring.motan.basicreferer.application=demo
-#spring.motan.basicreferer.accessLog=false
-#spring.motan.basicreferer.retries=3
-#spring.motan.basicreferer.throwException=true
+spring.motan.registry.regProtocol=local
+
+# Motan Basicreferer config
+spring.motan.basicreferer.application=shop
+spring.motan.basicreferer.accessLog=false
+spring.motan.basicreferer.retries=1
+spring.motan.basicreferer.throwException=true
+
+# Motan BasicService config
+spring.motan.basicservice.application=demo
+spring.motan.basicservice.exportPort=8888
+spring.motan.basicservice.accessLog=false
+spring.motan.basicservice.shareChannel=true
