--- a/swak-redis/pom.xml
+++ b/swak-redis/pom.xml
@@ -83,5 +83,11 @@
 			<artifactId>kryo-shaded</artifactId>
 			<version>${kryo.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
