--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<module>swak-test</module>
 		<module>swak-gen</module>
 		<module>swak-app</module>
+		<module>swak-mq</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.1.3.RELEASE</spring-boot.version>
@@ -55,7 +56,7 @@
 		<reactor.version>3.2.6.RELEASE</reactor.version>
 		<async.httpclient.version>2.7.0</async.httpclient.version>
 		<motan.version>1.1.3</motan.version>
-		<vertx.version>3.5.4</vertx.version>
+		<vertx.version>3.6.3</vertx.version>
 		<qrcode.version>3.3.3</qrcode.version>
 		<javapoet.version>1.11.1</javapoet.version>
 		<zookeeper.version>3.4.8</zookeeper.version>
