一款简单的RabbitMQ 生产者或消费者

--- a/swak-test/pom.xml
+++ b/swak-test/pom.xml
@@ -21,6 +21,7 @@
 		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-starter</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
