--- a/swak-mq/pom.xml
+++ b/swak-mq/pom.xml
@@ -8,20 +8,19 @@
 	</parent>
 	<artifactId>swak-mq</artifactId>
 	<dependencies>
+	    <dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-core</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.rabbitmq</groupId>
 			<artifactId>amqp-client</artifactId>
-			<version>5.6.0</version>
+			<version>${rabbitmq.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.amqp</groupId>
-			<artifactId>spring-rabbit</artifactId>
-			<version>2.1.4.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-amqp</artifactId>
-			<version>2.1.3.RELEASE</version>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
