--- a/swak-vertx/pom.xml
+++ b/swak-vertx/pom.xml
@@ -97,18 +97,20 @@
 		</dependency>
 		<dependency>
 			<groupId>io.vertx</groupId>
+			<artifactId>vertx-micrometer-metrics</artifactId>
+			<version>${vertx.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.vertx</groupId>
 			<artifactId>vertx-mongo-client</artifactId>
 			<version>${vertx.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-rabbitmq-client</artifactId>
 			<version>${vertx.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.vertx</groupId>
-			<artifactId>vertx-micrometer-metrics</artifactId>
-			<version>${vertx.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
