--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 		<slf4j.version>1.7.5</slf4j.version>
 		<netty.version>4.1.33.Final</netty.version>
 		<micrometer.version>1.1.3</micrometer.version>
+		<HdrHistogram.version>2.1.10</HdrHistogram.version>
 		<ehcache.version>3.6.3</ehcache.version>
 		<lettuce.version>5.1.4.RELEASE</lettuce.version>
 		<kryo.version>4.0.2</kryo.version>
