--- a/swak-sample-vertx/src/main/resources/application.properties
+++ b/swak-sample-vertx/src/main/resources/application.properties
@@ -4,6 +4,10 @@ spring.vertx.mode=OS
 spring.vertx.workers.read_pool=5
 spring.vertx.workers.write_pool=15
 
+# redis cache
+spring.cache.hosts=127.0.0.1:6379
+spring.cache.password=12345678....
+
 # data base default mybatis
 spring.datasource.url = jdbc:mysql://localhost:3306/cloud?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = root
