--- a/swak-core/pom.xml
+++ b/swak-core/pom.xml
@@ -70,6 +70,10 @@
 					<groupId>org.hdrhistogram</groupId>
 					<artifactId>HdrHistogram</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.latencyutils</groupId>
+					<artifactId>LatencyUtils</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
