开启指标支持都在 actuator 上启用，指标这块先这样子，先把线程池监控起来。

--- a/swak-actuator/pom.xml
+++ b/swak-actuator/pom.xml
@@ -41,6 +41,12 @@
 			<artifactId>swak-vertx</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-micrometer-metrics</artifactId>
+			<version>${vertx.version}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
