--- a/swak-gen/pom.xml
+++ b/swak-gen/pom.xml
@@ -24,6 +24,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.swak</groupId>
+			<artifactId>swak-flux</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
 			<artifactId>swak-fx</artifactId>
 		</dependency>
 		<dependency>
