将指标统计移动到监控的目录中

--- a/swak-actuator/pom.xml
+++ b/swak-actuator/pom.xml
@@ -17,6 +17,26 @@
 			<artifactId>swak-starter</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-core</artifactId>
+			<version>${micrometer.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.hdrhistogram</groupId>
+					<artifactId>HdrHistogram</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.latencyutils</groupId>
+					<artifactId>LatencyUtils</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.hdrhistogram</groupId>
+			<artifactId>HdrHistogram</artifactId>
+			<version>${HdrHistogram.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-flux</artifactId>
 			<scope>provided</scope>
