取消对 javapoet 的依赖

--- a/swak-motan/pom.xml
+++ b/swak-motan/pom.xml
@@ -46,6 +46,7 @@
 			<groupId>com.squareup</groupId>
 			<artifactId>javapoet</artifactId>
 			<version>${javapoet.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.zookeeper</groupId>
