--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<module>swak-gen</module>
 		<module>swak-app</module>
 		<module>swak-mq</module>
+		<module>swak-mqtt</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.1.3.RELEASE</spring-boot.version>
