--- a/swak-sample-api/pom.xml
+++ b/swak-sample-api/pom.xml
@@ -13,6 +13,10 @@
 			<artifactId>swak-motan</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-flux</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.squareup</groupId>
 			<artifactId>javapoet</artifactId>
 			<version>${javapoet.version}</version>
