关于 javapoet 自动生成异步接口

--- a/swak-sample-api/pom.xml
+++ b/swak-sample-api/pom.xml
@@ -20,7 +20,7 @@
 			<groupId>com.squareup</groupId>
 			<artifactId>javapoet</artifactId>
 			<version>${javapoet.version}</version>
-			<scope>compile</scope>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<build>
