修改motan 请求超时的时间

--- a/swak-sample-vertx/src/main/resources/application.properties
+++ b/swak-sample-vertx/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.motan.basicreferer.application=shop
 spring.motan.basicreferer.accessLog=false
 spring.motan.basicreferer.retries=1
 spring.motan.basicreferer.throwException=true
+spring.motan.basicreferer.requestTimeout=60000
 
 # Motan BasicService config
 spring.motan.basicservice.application=demo
