消息队列的实例备注和mqtt 的实例备注

--- a/swak-mq/pom.xml
+++ b/swak-mq/pom.xml
@@ -22,5 +22,12 @@
 			<artifactId>swak-redis</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<!-- 查看使用案例上，和原生的使用一致，只是提供了  
+		    factory.setCredentialsProvider(new AliyunCredentialsProvider(${AccessKey}, "${SecretKey}", "${UID}"));
+		<dependency>
+			<groupId>com.alibaba.mq-amqp</groupId>
+			<artifactId>mq-amqp-client</artifactId>
+			<version>1.0.3</version>
+		</dependency> -->
 	</dependencies>
 </project>
