--- a/swak-sample-api/pom.xml
+++ b/swak-sample-api/pom.xml
@@ -36,7 +36,7 @@
 						</goals>
 						<configuration>
 							<sources>
-								<source>${project.build.directory}/generated-sources/annotations</source>
+								<source>${basedir}/src/main/generated-sources</source>
 							</sources>
 						</configuration>
 					</execution>
