--- a/swak-wechat/pom.xml
+++ b/swak-wechat/pom.xml
@@ -16,5 +16,16 @@
 			<groupId>com.swak</groupId>
 			<artifactId>swak-http</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 	</dependencies>
 </project>
