--- a/swak-test/pom.xml
+++ b/swak-test/pom.xml
@@ -37,5 +37,11 @@
 			<artifactId>swak-mq</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
