--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 		<module>swak-app</module>
 		<module>swak-mq</module>
 		<module>swak-mqtt</module>
+		<module>swak-rocketmq</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.1.4.RELEASE</spring-boot.version>
@@ -71,6 +72,7 @@
 		<controlsfx.version>8.40.14</controlsfx.version>
 		<freemarker.version>2.3.28</freemarker.version>
 		<rabbitmq.version>5.7.0</rabbitmq.version>
+		<rocketmq.version>4.5.1</rocketmq.version>
         <lombok.version>1.18.8</lombok.version>
         
 		<!-- test -->
