--- a/swak-starter/pom.xml
+++ b/swak-starter/pom.xml
@@ -70,6 +70,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.swak</groupId>
+			<artifactId>swak-rocketmq</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
 			<artifactId>swak-quartz</artifactId>
 			<scope>provided</scope>
 		</dependency>
