--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 		<module>swak-mq</module>
 		<module>swak-mqtt</module>
 		<module>swak-rocketmq</module>
+		<module>swak-template</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.1.4.RELEASE</spring-boot.version>
@@ -161,11 +162,6 @@
 			</dependency>
 			<dependency>
 				<groupId>com.swak</groupId>
-				<artifactId>swak-quartz</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.swak</groupId>
 				<artifactId>swak-excel</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -197,6 +193,11 @@
 			<dependency>
 				<groupId>com.swak</groupId>
 				<artifactId>swak-starter</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.swak</groupId>
+				<artifactId>swak-template</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
