指标监控第一版

--- a/swak-sample-vertx/pom.xml
+++ b/swak-sample-vertx/pom.xml
@@ -8,10 +8,6 @@
 	</parent>
 	<artifactId>swak-sample-vertx</artifactId>
 	<dependencies>
-	    <dependency>
-			<groupId>com.swak</groupId>
-			<artifactId>swak-actuator</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-vertx</artifactId>
@@ -41,6 +37,10 @@
 		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-metrics</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup</groupId>
