--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 		<module>swak-mqtt</module>
 		<module>swak-rocketmq</module>
 		<module>swak-template</module>
+		<module>swak-metrics</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.1.4.RELEASE</spring-boot.version>
@@ -198,6 +199,11 @@
 			<dependency>
 				<groupId>com.swak</groupId>
 				<artifactId>swak-template</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.swak</groupId>
+				<artifactId>swak-metrics</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
