--- a/swak-metrics/pom.xml
+++ b/swak-metrics/pom.xml
@@ -22,7 +22,6 @@
 			<artifactId>metrics-jvm</artifactId>
 			<version>${metrics.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-vertx</artifactId>
@@ -32,6 +31,12 @@
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-dropwizard-metrics</artifactId>
 			<version>${vertx.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-jdbc</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
