rabbit 的监控，后期添加对请求地址的指标监控

--- a/swak-metrics/pom.xml
+++ b/swak-metrics/pom.xml
@@ -38,5 +38,10 @@
 			<artifactId>swak-jdbc</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-mq</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
