--- a/swak-test/pom.xml
+++ b/swak-test/pom.xml
@@ -38,6 +38,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-metrics</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
