--- a/swak-sample-vertx/pom.xml
+++ b/swak-sample-vertx/pom.xml
@@ -16,10 +16,11 @@
 			<groupId>com.swak</groupId>
 			<artifactId>swak-starter</artifactId>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-motan</artifactId>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-jdbc</artifactId>
