--- a/swak-sample-vertx/pom.xml
+++ b/swak-sample-vertx/pom.xml
@@ -39,9 +39,15 @@
 			<groupId>com.swak</groupId>
 			<artifactId>swak-redis</artifactId>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-metrics</artifactId>
+		</dependency>
+		-->
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-mq</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.vertx</groupId>
