--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 		<module>swak-rocketmq</module>
 		<module>swak-template</module>
 		<module>swak-metrics</module>
+		<module>swak-mongodb</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.1.6.RELEASE</spring-boot.version>
@@ -85,6 +86,7 @@
 		<mysql-jdbc.version>5.1.47</mysql-jdbc.version>
 		<h2-jdbc.version>1.4.197</h2-jdbc.version>
 		<sqlite-jdbc.version>3.25.2</sqlite-jdbc.version>
+		<mongodb.version>3.11.0</mongodb.version>
 
 		<!-- other setting -->
 		<jdk.version>1.8</jdk.version>
@@ -204,6 +206,11 @@
 			<dependency>
 				<groupId>com.swak</groupId>
 				<artifactId>swak-metrics</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.swak</groupId>
+				<artifactId>swak-mongodb</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
