--- a/swak-mongodb/pom.xml
+++ b/swak-mongodb/pom.xml
@@ -17,5 +17,11 @@
 			<artifactId>mongodb-driver-async</artifactId>
 			<version>${mongodb.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-mongo-client</artifactId>
+			<version>${vertx.version}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
