--- a/swak-mongodb/pom.xml
+++ b/swak-mongodb/pom.xml
@@ -17,5 +17,11 @@
 			<artifactId>mongodb-driver-async</artifactId>
 			<version>${mongodb.version}</version>
 		</dependency>
+		<!-- 
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>2.1.10.RELEASE</version>
+		</dependency> -->
 	</dependencies>
 </project>
