--- a/swak-sample-vertx/src/main/resources/application.properties
+++ b/swak-sample-vertx/src/main/resources/application.properties
@@ -8,6 +8,12 @@ spring.vertx.workers.write_pool=15
 spring.cache.hosts=127.0.0.1:6379
 spring.cache.password=12345678....
 
+# rabbit mq
+spring.rabbitmq.user=admin
+spring.rabbitmq.password=admin
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+
 # data base default mybatis
 spring.datasource.url = jdbc:mysql://localhost:3306/cloud?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = root
