--- a/swak-sample-vertx/src/main/resources/application.properties
+++ b/swak-sample-vertx/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# config env
+spring.profiles.active=dev
+
 # vertx
 spring.vertx.port=8080
 spring.vertx.mode=OS
@@ -14,11 +17,28 @@ spring.rabbitmq.password=admin
 spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
 
-# data base default mybatis
-spring.datasource.url = jdbc:mysql://localhost:3306/cloud?useUnicode=true&characterEncoding=utf-8
-spring.datasource.username = root
-spring.datasource.password = rootadmin
-spring.datasource.maxActive= 40
+# datasource
+#spring.datasource.url = jdbc:mysql://localhost:3306/swak?useUnicode=true&characterEncoding=utf-8
+#spring.datasource.username = root
+#spring.datasource.password = rootadmin
+#spring.datasource.maxActive= 40
+
+# datasource sharding
+spring.datasource.db = sharding
+sharding.jdbc.datasource.names=master,slave0
+sharding.jdbc.datasource.master.url=jdbc:mysql://localhost:3306/swak?useUnicode=true&characterEncoding=utf-8
+sharding.jdbc.datasource.master.username=root
+sharding.jdbc.datasource.master.password=rootadmin
+
+sharding.jdbc.datasource.slave0.url=jdbc:mysql://localhost:3307/swak?useUnicode=true&characterEncoding=utf-8
+sharding.jdbc.datasource.slave0.username=root
+sharding.jdbc.datasource.slave0.password=rootadmin
+
+sharding.jdbc.config.masterslave.load-balance-algorithm-type=round_robin
+sharding.jdbc.config.masterslave.name=ms
+sharding.jdbc.config.masterslave.master-data-source-name=master
+sharding.jdbc.config.masterslave.slave-data-source-names=slave0
+sharding.jdbc.config.masterslave.props.sql.show=true
 
 # motan config
 spring.motan.registry.regProtocol=local
