--- a/swak-sample-vertx/src/main/resources/application-dev.properties
+++ b/swak-sample-vertx/src/main/resources/application-dev.properties
@@ -1,1 +1,16 @@
 # master-salve config
+spring.datasource.db = sharding
+sharding.jdbc.datasource.names=master,slave0
+sharding.jdbc.datasource.master.url=jdbc:mysql://localhost:3306/swak?useUnicode=true&characterEncoding=utf-8
+sharding.jdbc.datasource.master.username=root
+sharding.jdbc.datasource.master.password=rootadmin
+
+sharding.jdbc.datasource.slave0.url=jdbc:mysql://localhost:3307/swak?useUnicode=true&characterEncoding=utf-8
+sharding.jdbc.datasource.slave0.username=root
+sharding.jdbc.datasource.slave0.password=rootadmin
+
+sharding.jdbc.config.masterslave.load-balance-algorithm-type=round_robin
+sharding.jdbc.config.masterslave.name=ms
+sharding.jdbc.config.masterslave.master-data-source-name=master
+sharding.jdbc.config.masterslave.slave-data-source-names=slave0
+sharding.jdbc.config.masterslave.props.sql.show=true
