--- a/swak-sample-vertx/src/main/resources/application.properties
+++ b/swak-sample-vertx/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # config env
-spring.profiles.active=dev
+spring.profiles.active=test
 
 # vertx
 spring.vertx.port=8080
@@ -18,27 +18,10 @@ spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
 
 # datasource
-#spring.datasource.url = jdbc:mysql://localhost:3306/swak?useUnicode=true&characterEncoding=utf-8
-#spring.datasource.username = root
-#spring.datasource.password = rootadmin
-#spring.datasource.maxActive= 40
-
-# datasource sharding
-spring.datasource.db = sharding
-sharding.jdbc.datasource.names=master,slave0
-sharding.jdbc.datasource.master.url=jdbc:mysql://localhost:3306/swak?useUnicode=true&characterEncoding=utf-8
-sharding.jdbc.datasource.master.username=root
-sharding.jdbc.datasource.master.password=rootadmin
-
-sharding.jdbc.datasource.slave0.url=jdbc:mysql://localhost:3307/swak?useUnicode=true&characterEncoding=utf-8
-sharding.jdbc.datasource.slave0.username=root
-sharding.jdbc.datasource.slave0.password=rootadmin
-
-sharding.jdbc.config.masterslave.load-balance-algorithm-type=round_robin
-sharding.jdbc.config.masterslave.name=ms
-sharding.jdbc.config.masterslave.master-data-source-name=master
-sharding.jdbc.config.masterslave.slave-data-source-names=slave0
-sharding.jdbc.config.masterslave.props.sql.show=true
+spring.datasource.url = jdbc:mysql://localhost:3306/swak?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username = root
+spring.datasource.password = rootadmin
+spring.datasource.maxActive= 40
 
 # motan config
 spring.motan.registry.regProtocol=local
