--- a/swak-starter/pom.xml
+++ b/swak-starter/pom.xml
@@ -26,6 +26,10 @@
 					<groupId>org.yaml</groupId>
 					<artifactId>snakeyaml</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>jakarta.annotation</groupId>
+					<artifactId>jakarta.annotation-api</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
