--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<module>swak-metrics</module>
 		<module>swak-mongodb</module>
 		<module>swak-dubbo</module>
+		<module>swak-api</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.2.0.RELEASE</spring-boot.version>
@@ -208,7 +209,7 @@
 				<artifactId>swak-mongodb</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-
+			
 			<!-- 测试 -->
 			<dependency>
 				<groupId>com.swak</groupId>
@@ -247,19 +248,21 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
 				<configuration>
-					<failOnError>true</failOnError>
-					<verbose>true</verbose>
-					<fork>true</fork>
-					<compilerArgument>-nowarn</compilerArgument>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
+					<compilerArgs>
+						<arg>-XDignore.symbol.file</arg>
+					</compilerArgs>
+					<compilerArgument>-proc:none</compilerArgument>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
 				<configuration>
 					<skipTests>true</skipTests>
 				</configuration>
@@ -267,6 +270,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
+				<version>3.2.0</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
