--- a/swak-api/pom.xml
+++ b/swak-api/pom.xml
@@ -10,11 +10,39 @@
 	<packaging>maven-plugin</packaging>
 	<name>swak-api</name>
 	<properties>
+	    <qdox.version>2.0-M10</qdox.version>
+	    <javafaker.version>1.0.1</javafaker.version>
+	    <lombok.version>1.18.10</lombok.version>
 		<maven-plugin-api>3.6.2</maven-plugin-api>
 		<maven-plugin-annotations.version>3.6.0</maven-plugin-annotations.version>
 		<maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-core</artifactId>
+		</dependency>
+		<dependency>
+            <groupId>com.thoughtworks.qdox</groupId>
+            <artifactId>qdox</artifactId>
+            <version>${qdox.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>${javafaker.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.shalousun</groupId>
+            <artifactId>common-util</artifactId>
+            <version>1.8.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
@@ -45,7 +73,8 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
