--- a/swak-api/pom.xml
+++ b/swak-api/pom.xml
@@ -54,6 +54,12 @@
 			<version>${maven-plugin-annotations.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
