--- a/swak-kotlin/pom.xml
+++ b/swak-kotlin/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -7,14 +8,7 @@
 		<version>1.0.0_final</version>
 	</parent>
 	<artifactId>swak-kotlin</artifactId>
-
-    <properties>
-        <kotlin.version>1.3.0</kotlin.version>
-    </properties>
-
-
-    <dependencies>
-		<!-- http -->
+	<dependencies>
 		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-core</artifactId>
@@ -38,20 +32,20 @@
 			<artifactId>kotlinx-coroutines-reactor</artifactId>
 			<version>${kotlin.coroutines.version}</version>
 		</dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test</artifactId>
-            <version>${kotlin.version}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-test</artifactId>
+			<version>${kotlin.version}</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
 				<artifactId>kotlin-maven-plugin</artifactId>
 				<version>${kotlin.version}</version>
-                <configuration>
+				<configuration>
 					<jvmTarget>1.8</jvmTarget>
 				</configuration>
 			</plugin>
